Add model turn-taking

--- a/docs/thesis/skeleton.tex
+++ b/docs/thesis/skeleton.tex
@@ -161,7 +161,7 @@ The question remains, what features of speech are relevant when projecting TCU c
 
 Although \cite{Sacks1996} left solving the question of how projection occurs they suggested that syntax provides a main projection cue allthough they also point out that intonation could also be used to differentiate between syntacitcally complete phrases. \cite{Sacks1974} argued that a relationship between syntax and projection can be illustrated by a listener's behviour of overlapping the final-phrase of a sentence while the speakers 'drawls' on the final syllable. As such the listener was projecting the turn-end based on the unfolding syntactic form and the current tempo of the utterance and as such an overlap occurs due to the slowing down of tempo by the speaker. 
 
-In their study \cite{Ford1996}, attempts to characterise TCUs using syntactic, intonational and pragmatic features and to quantify these features' role in TRPs. To do so they operantialised syntactic, intontation and pragmatic completness and use these to define points in an utterance that are complete with respect to each of these features. An utterance is \texttt{syntactically complete} according to \cite{Ford1996} if "in its discourse context, it could be interpreted as a complete clause, that is, with an overt or directly recoverable predicate, without considering intonation or interactional import.". They go on to describe syntactic completeness is "judged incremenatally within its previous context". \texttt{Intonational completeness} follows from other literature \cite{DuBoise1993} and characterised as "a stretch of speech uttered undera single coherent intonation contour". \texttt{Pragmatic completeness} is based on the notion of conversational action and in this instance the action completion, or pragmatic completeness, is based on whether an utterance is a part of a greater conversational action. \cite{Ford1996} found most points of turn transitions can be accurately predicted by a combination of all three measures of completeness, known as a \texttt{Complex Transition Relevance Place (CRTP)}, where they report that CRTPs predict 71\& of actual turn-shifts. 
+In their study \cite{Ford1996}, attempts to characterise TCUs using syntactic, intonational and pragmatic features and to quantify these features' role in TRPs. To do so they operantialised syntactic, intontation and pragmatic completness and use these to define points in an utterance that are complete with respect to each of these features. An utterance is \texttt{syntactically complete} according to \cite{Ford1996} if "in its discourse context, it could be interpreted as a complete clause, that is, with an overt or directly recoverable predicate, without considering intonation or interactional import.". They go on to describe syntactic completeness is "judged incremenatally within its previous context". \texttt{Intonational completeness} follows from other literature \cite{DuBoise1993} and characterised as "a stretch of speech uttered undera single coherent intonation contour". \texttt{Pragmatic completeness} is based on the notion of conversational action and in this instance the action completion, or pragmatic completeness, is based on whether an utterance is a part of a greater conversational action. \cite{Ford1996} found most points of turn transitions can be accurately predicted by a combination of all three measures of completeness, known as a \texttt{Complex Transition Relevance Place (CRTP)}, where they report that CRTPs predict 71\% of actual turn-shifts. 
 
 \cite{Ford1996} theorised that TCUs and their partnering TRPs are a complex notion and as such multiple factors should be considered for predicting a turn completion. There has been some debate, however, about which feature is most important for projection. 
 
@@ -173,7 +173,15 @@ An experimental study \cite{DeRuiter2006}, showed that listeners can predict tur
 \cite{LevTor2015}, from the experimental results listed above, derived a psycholinguistic model in order to account for the observations of \cite{Sacks1974} and with additional temporal considerations. A few results were mentioned previously but as suggested by \cite{Sacks1974} the latencies of speech production means that turn-taking is predictive in nature. However, this could purely relate to the production processes as turn-final cues are used in order for the production to be released. This is inline with arguments of speech production as the speech has already been prepared and the only action required is articulation. These cues have been identified as prosodic: phrase-final syllable lengthening, intonation; syntactic: syntactic completness and the overall conversational action of the contained utterance. 
 
 \section{Models for End-of-Turn Detection and Prediction}
+The tradition around conversational systems' turn-taking ability is based on the existence of a silence threshold. In these models a turn is assumed to have been yielded by the current spekaer once some threshold has been past (around 650ms). However, as it is to be expected, this approach yields sluggish or possibly, misstaken interruptions. As discussed above, human-human turn-taking organisation is complicated and nuanced and as such the models generated should aim to be able to utilise the signals available in conversation. 
+Further research brought this idea into fruition with what could be interpreted as 'IPU-based' models. An IPU in this instance, is a \texttt{Interpausal Unit}, which is a segmented part of continuous speech without silence exceeding a certain threshold (200ms). IPU-based models still undertake some form of silence detection, just with a shorter threshold than a pure-silence model, and after the sufficient silence has been detected the model predicts whether the silence is a TRP or a non-TRP and as such whether the turn has been yielded by the speaker.
 
+Naturally, these models resembled the natural progression of state-of-the art machine learning models moving from rule-based classifier \cite{Bell2001}, to a decision-tree classifier \cite{Sato2002, Ferrer2002, Schlangen2006, Meena2014, RauxEsk2008} and then now onto deep learning architectures including the use of the LSTM RNN architecture \cite{Maier2017}. 
+Each model uses a different set of features and found varying results on the effectiveness of various prosodic, lexicosyntactic and pragmatic features. Specifically \cite{Sato2002} and \cite{Meena2014} found that prosody did not contribute significantly to a decision while \cite{Ferrer2002} and \cite{Schlangen2006} found that syntactic and prosodic features both contribute to turn-taking accuracy. 
+Models such as \cite{Sato2002, Schlangen2006, Meena2014} specifically use silence thresholds that are fixed in size. As such, if the speaker yields their turn and if the model does not detect an end of turn then a state of silence may continue. As such other models such as \cite{Ferrer2002, Rau2008} incorporate silence length in order to continouly condition a response based on the time of silence and as such the longer after a pause the more likely that the turn has in fact been yielded. \cite{Raux2008}, took this step further by also using turn-holding cues in order to condition the silence threshold so when more turn-holding cues are detected, the system will wait longer before considering a turn-shift event. 
+This process of monitoring speaker cues, to determine a turn-holding intention \cite{Raux2008}, has introduced the concept of a continuous model to monitor turn-taking. An approach which has been all the more feasilble with advances in both deep learning architectures and more powerful feature extractors or pretrained features. Rather than taking on a traditional approach of classifying an utterance, the continuous model processes an utterance incrementally so that at any point the model is able to predict the liklihood of a turn-shift. The system bares more symmetry with our human-human interactions as the system could be able to project turn-completions, determine intent or action and generate an appropriate response. 
+Another issue with previous approaches to turn-taking, namaly the classification approach, is the availability of data that is accurately annotated. As well as this, speech data can be noisy as noted by \cite{Sacks1974} overlapping speech is common but brief, and these sections of speech should not constitue a turn-shift and so this has to be annotated well in data. Recognising this issue, \cite{Skantze2017} proposed a general, continuous turn-taking model, that was trained in a self-supervised manner. Self-supervised as the model is predicting the voice activity of separate speakers over the next two secondsand so it is able to predict a turn-shift based on this speech activity data. The model is also continuous in that it makes these predictions in 50ms intervals. 
+Others have also adopted the general LSTM approach \cite{Roddy2018a, Ward2019} to investigate the effectiveness of certain features. , \cite{Roddy2018} introduced a multiscale approach where lexicosyntactic and prosodic features are processed with different temporal speeds, 
 
 
 
