--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -299,7 +299,7 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
 
 @article{Duncan1973,
   title={Toward a grammar for dyadic conversation},
-  author={DUNCAN, STARKEY, JR},
+  author={Duncan, STARKEY, JR},
   year={1973},
   publisher={Walter de Gruyter, Berlin/New York Berlin, New York}
 }
