--- a/docs/thesis/skeleton.tex
+++ b/docs/thesis/skeleton.tex
@@ -136,20 +136,23 @@ subject to the usual late penalties based on your final submission time.
 
 \section{Turn-taking: From the Conversational Analaysis Perspective}
 Over the last few decades, psycolinguists have been fascinated with the complexity of the mechanisms of conversation along with the apparent ease with which speaker's are able to converse in a orderly and timely manner. 
-\cite{Sacks1974} is a widely cited paper that outlines some general observations that has gone on to inform general turn-taking literature. Primarily, that turn-taking organisation is not planned in adavance however the actions taken are still coordinated, in a flexible manner that can be decided upon by the current participants in a conversation. Typically one person speaks at a time and most transitions have a small gap or overlap but there are transitions where no gap and no overlap occur. 
-\cite{LevTor2015} used automatic analaysis to show that these observsations are indeed statisically valid. They note, that turns are generally short (mean 1680ms, median 1227ms) and turn transitions are typically short where most are between 100 and 200ms. 
+\cite{Sacks1974} is a widely cited paper that outlines some general observations that has gone on to inform general turn-taking literature. Primarily, that turn-taking organisation is not planned in adavance however the actions taken are still coordinated, in a flexible manner that can be decided upon by the current participants in a conversation. Typically one person speaks at a time and most transitions have a small gap or overlap but transitions do occur with no gap and no overlap. 
+\cite{LevTor2015} used automatic analaysis to show that these observsations are indeed statisically valid. They note, that turns are generally short (mean 1680ms, median 1227ms) and turn transitions most commonly fall between 100ms and 200ms but the vast majority fall in the -100ms and 600ms range. 
 
 \subsection{Models of Turn-taking Organisation} 
-This turn-taking organisation has generally been characterised in two different way within literature: the \texttt{reactionary} approach and the \texttt{predictive} approach.
-The former assumes that participants simply understand end-of-turn signals and react to them accordingly while the predictive approach entails the listener predicting the end of turn in advance such that responses are well timed. The reactionary approach assumes that turn-taking organisation is regulated by both vocal and gestural signals (\cite{Yngve1970}). This approach was pioneered by \cite{Duncan1972, Duncan1973, Duncan1974, Duncan1977} who argued for a precise set of context free turn-yielding 'signals'. \cite{Duncan1972} listed off phrase-final intonation, drawl on the final syllable, termination of hand gesticulation, changes in pitch and a termination of a grammatical clause. \cite{Duncan1977} that a speaker always produces at least one turn-yielding signal and as such, they advanced a model where turn-taking is purely controlled by the current speaker. 
+Turn-taking organisation has generally been characterised in two different ways within literature: the \texttt{reactionary} and the \texttt{predictive} approach.
+The former assumes that participants simply understand end-of-turn signals and react to them accordingly while the predictive approach entails the listener predicting the end of turn in advance such that responses are well timed. 
 
-Later literature goes on to argue against the general model of a reactionary approach as simply, turn-transitions occur too quickly and turn-yielding signals occur too late within a speaker's utterance for the listener to simply react to an end-of-turn signal. 
+The reactionary approach assumes that turn-taking organisation is regulated by both vocal and gestural signals (\cite{Yngve1970}). This approach was pioneered by (\cite{Duncan1972, Duncan1973, Duncan1974, Duncan1977}) who argued for a precise set of context free turn-yielding 'signals'. \cite{Duncan1972} described phrase-final intonation, drawl on the final syllable, termination of hand gesticulation, changes in pitch and a termination of a grammatical clause as turn-yielding signals. 
 
-\cite{Sacks1974} were the first to argue for this \texttt{predictive} approach and in their analysis of turn-taking argued that the observed speed of turn-transitions required some form of `projection` and even then, production of language would begin prior to the end of a turn. This model of turn-taking is based off of separating speech into units, where one speaker is the speaker, called \texttt{Turn Construction Units (TCU)} and immediately after completing a TCU a \texttt{Transition Relevance Place (TRP)} occurs that signals that a turn-transition (turn-shift) can occur. It is also important to note that a TRP does not always result in a turn-shift and a turn-shift does not always occur at a TRP. However, at each TRP there are certain rules that govern how, and if, a turn-shift will occur. 
+Later literature goes on to argue against the general model of a reactionary approach as, put simply, turn-transitions occur too quickly and turn-yielding signals occur too late within a speaker's utterance for the listener to simply react to an end-of-turn signal. 
 
-(1) The current speaker may select a new speaker during which the other participants act as listeners 
-(2) If the current speaker does not select then any participant can self-select. The first to start gains the turn.
-(3) If no other party self-selects, the current speaker may continue. 
+\cite{Sacks1974} pioneered the \texttt{predictive} approach and in their analysis of turn-taking argued that the observed speed of turn-transitions required some form of `projection` with the production of language beginning prior to the end of a turn. This model of turn-taking is based off of separating speech into units, where one speaker is the speaker, called \texttt{Turn Construction Units (TCU)} and immediately after completing a TCU a \texttt{Transition Relevance Place (TRP)} occurs that signals that a turn-transition (turn-shift) can occur. It is also important to note that a TRP does not always result in a turn-shift and a turn-shift does not always occur at a TRP. Nevertheles, every TRP is governed by a set of rules determing whether or not a TRP will transpire: 
+\begin{enumerate}
+    \item{} The current speaker may select a new speaker during which the other participants act as listeners 
+    \item{} If the current speaker does not select then any participant can self-select. The first to start gains the turn.
+    \item{} If no other party self-selects, the current speaker may continue. 
+\end{enumerate} 
 
 The rules predict that intra-speaker silent gaps are longer than inter-speaker gaps. \cite{tenBosch2005} reports that intra-speaker gaps are, on average, 25\% larger than inter-speaker gaps. This can be explained by rule (3) as for a speaker to continue (an intra-speaker gap) they have to first go though the other selection criteria and then continue speaking.
 \cite{Sacks1974} note that in order for a listener to project the end-of-turn than the speaker would have to construct their turns, with successive TCUs, in such a way that a turn transition is foreshadowed, showing that the turn is, in effect, winding down. 
